
## Modules ##
 - *bootloader* can now be configured to try to generate a unique
   suffix for the bootloader-id. #1820
 - *grubcfg* now has a configurable default for kernel parameters,
   which allows distributions to change the value from `quiet`.
   The default, if nothing is set, remains `quiet`. Use an explicitly-
   empty list to specify no-arguments-at-all.
 - The *umount* module has been re-written in C++. The copy-a-log-file
   functionality has been removed. Use the *preservefiles* module for that.


# 3.2.50 (2022-01-18) #

This release contains contributions from (alphabetically by first name):
 - Anke Boersma
 - Erik Dubois
 - Evan James
 - Johannes Kamprad
 - Taejun Park (new contributor, welcome!)

**Replacement notice:** The *umount* module will be replaced by a C++
implementation in the next release. The "preserve log file" feature
will be removed in that release. Use the *preservefiles* module instead.

## Core ##
 - No core changes yet

## Modules ##
 - *initcpiocfg* mentioned a special kernel-name "all", which did not work,
   and a special kernel-name "$uname" which cannot work. Fixed the former
   and removed the "$uname" special key. (Thanks Evan)
 - *luksswaphookcfg* has been converted to a C++ module.
 - *networkcfg* could fail to update the NetworkManager configuration
   if the SSID or username contained non-ASCII characters **and** the
   default Python text-file encoding was set to ASCII. The files are
   now read and written in UTF-8, explicitly. #1848
 - *partition* always sets *bigtime* option on XFS filesystems, if possible.
   Requires sufficiently-recent xfsprogs. #1874
 - *preservefiles* was missing some necessary features, needed for it
   to replace the deprecated log-file-saving functionality in the *umount*
   module. (Thanks Erik and Joe for testing) #1851
 - *umount* is now marked as an emergency module in the example configuration,
   since it should **probably** be run as a cleanup. (Thanks Evan)